<resources>
    <string name="app_name">TaskSign01</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signin_btn_login">로그인</string>
    <string name="signup_name_tv">이름</string>
    <string name="signup_name_input">이름을 입력하세요.</string>
    <string name="signup_id_tv">아이디</string>
    <string name="signup_id_input">아이디를 입력하세요.</string>
    <string name="signup_btn_idcheck">중복확인</string>
    <string name="signup_pw_tv">비밀번호</string>
    <string name="signup_pw_input1">비밀번호를 입력하세요.</string>
    <string name="signup_pw_input2">비밀번호를 다시 입력하세요.</string>
    <string name="signup_age_tv">나이</string>
    <string name="signup_age_input">나이를 입력하세요.</string>
    <string name="signup_mbti_tv">MBTI</string>
    <string name="signup_mbti_input">MBTI를 입력하세요</string>
    <string name="signup_email_tv">Email</string>
    <string name="signup_email_input">이메일을 입력하세요</string>
    <string name="signup_btn_join">회원가입</string>
    <string name="home_name_show">예시 이름</string>
    <string name="home_id_show">예시 아이디</string>
    <string name="home_pw_show">예시 비밀번호</string>
    <string name="home_age_show">예시 나이</string>
    <string name="home_mbti_show">예시 MBTI</string>
    <string name="home_email_show">예시 Email</string>
    <string name="home_btn_return">종료</string>
    <string name="kt_isLoginOk">로그인 완료</string>
</resources>