<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/homeImage"
        android:layout_width="224dp"
        android:layout_height="196dp"

        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"

        android:src="@drawable/home01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_finish"
        app:layout_constraintTop_toBottomOf="@+id/homeImage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="305dp"
                android:text="@string/signup_name_tv"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_thisName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/home_name_show"
                android:textColor="@color/mygreen"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toTopOf="@+id/tv_userName"
                app:layout_constraintBottom_toBottomOf="@+id/tv_userName"
                app:layout_constraintStart_toEndOf="@+id/tv_userName" />

            <TextView
                android:id="@+id/tv_userID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="286dp"
                android:text="@string/signup_id_tv"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_thisName" />

            <TextView
                android:id="@+id/tv_thisID"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/home_id_show"
                android:textColor="@color/mygreen"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toTopOf="@+id/tv_userID"
                app:layout_constraintBottom_toBottomOf="@+id/tv_userID"
                app:layout_constraintStart_toEndOf="@+id/tv_userID" />

            <TextView
                android:id="@+id/tv_userPW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="286dp"
                android:text="@string/signup_pw_tv"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_thisID" />

            <TextView
                android:id="@+id/tv_thisPW"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/home_pw_show"
                android:textColor="@color/mygreen"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toTopOf="@+id/tv_userPW"
                app:layout_constraintBottom_toBottomOf="@+id/tv_userPW"
                app:layout_constraintStart_toEndOf="@+id/tv_userPW"/>

            <TextView
                android:id="@+id/tv_userAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="286dp"
                android:text="@string/signup_age_tv"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_thisPW" />

            <TextView
                android:id="@+id/tv_thisAge"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/home_age_show"
                android:textColor="@color/mygreen"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toTopOf="@+id/tv_userAge"
                app:layout_constraintBottom_toBottomOf="@+id/tv_userAge"
                app:layout_constraintStart_toEndOf="@+id/tv_userAge"/>


            <TextView
                android:id="@+id/tv_userMBTI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="286dp"
                android:text="@string/signup_mbti_tv"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_thisAge" />

            <TextView
                android:id="@+id/tv_thisMBTI"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/home_mbti_show"
                android:textColor="@color/mygreen"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toTopOf="@+id/tv_userMBTI"
                app:layout_constraintBottom_toBottomOf="@+id/tv_userMBTI"
                app:layout_constraintStart_toEndOf="@+id/tv_userMBTI"
                />

            <TextView
                android:id="@+id/tv_userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="286dp"
                android:text="@string/signup_email_tv"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_thisMBTI" />

            <TextView
                android:id="@+id/tv_thisEmail"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/home_email_show"
                android:textColor="@color/mygreen"
                android:layout_marginStart="30dp"
                android:textSize="30sp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toTopOf="@+id/tv_userEmail"
                app:layout_constraintBottom_toBottomOf="@+id/tv_userEmail"
                app:layout_constraintStart_toEndOf="@+id/tv_userEmail"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="650dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="33dp"
        android:text="@string/home_btn_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>